tests/baselines/reference/duplicateIdentifierInCatchBlock.errors.txt
==== tests/cases/compiler/duplicateIdentifierInCatchBlock.ts (3 errors) ====
    var v;
    try { } catch (e) {
        function v() { }
    }
    
    function w() { }
    try { } catch (e) {
        var w;
    }
    
    try { } catch (e) {
        var x;
        function x() { } // error
                 ~
!!! error TS2000: Duplicate identifier 'x'.
        function e() { } // error
                 ~
!!! error TS2000: Duplicate identifier 'e'.
        var p: string;
        var p: number; // error
            ~~~~~~~~~
!!! error TS2134: Subsequent variable declarations must have the same type.  Variable 'p' must be of type 'string', but here has type 'number'.
    }